# WaypointLearning

./: .gitignore  CMakeLists.txt  CoordinateDescent.py  DataCollection.py  DataHandler.py  GeneralPolicyLearner.py  InstallPackages  Makefile  PlotData.R  PlotTrajectory.py  README.md  Readme_plotCost.rtf  Readme_plotCost.txt  SampleCostFunction.py  TestWaypointLearner.py  WaypointBaselineNN.py  WaypointDistributionNN.py  Waypoint_learner_foundation.py  best_found.nn  error.txt  function call  functioncall.py  initpath  plot.py  plotCost  plotCost.py  testErrors.py  test_case_best_ann_eval.csv  test_case_coord_eval.csv  test_case_optimal.csv  token.txt  trajectories.eps  trajectories_cost.eps  trajectories_optimal.eps  waypath  waypath0  waypath1  waypath2  waypath3  waypath4  (+3 more)
src/: .solve.cc.kate-swp  .tsocs.cc.swo  data_structures.h  evaluate.cc  main.cpp  solve.cc  tsocs.cc  tsocs.h  tsocs_structures.h  tsocs_templates.h  utils.h
traj/: waypath10  waypath11  waypath1101  waypath1104  waypath1106  waypath1108  waypath111  waypath1110  waypath1111  waypath1113  waypath1114  waypath1115  waypath1119  waypath1120  waypath1121  waypath1122  waypath1123  waypath1128  waypath1129  waypath113  waypath1131  waypath1132  waypath1134  waypath1135  waypath1137  waypath1138  waypath114  waypath1140  waypath1141  waypath1142  waypath1144  waypath1149  waypath1150  waypath1152  waypath1153  waypath1155  waypath1156  waypath1157  waypath1158  waypath1159  (+205 more)
